tests/machine/x/go/cross_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/cross_join.go:12:17: undefined: Customer
../../../tests/machine/x/go/cross_join.go:15:5: undefined: Customer
../../../tests/machine/x/go/cross_join.go:18:5: undefined: Customer
../../../tests/machine/x/go/cross_join.go:22:14: undefined: Order
../../../tests/machine/x/go/cross_join.go:26:5: undefined: Order
../../../tests/machine/x/go/cross_join.go:30:5: undefined: Order
../../../tests/machine/x/go/cross_join.go:35:21: undefined: Result
../../../tests/machine/x/go/cross_join.go:36:16: undefined: Result
../../../tests/machine/x/go/cross_join.go:39:31: undefined: Result

1: //go:build ignore
